--- a/HW2/Eric_Cheng_DimRed_Tabular.ipynb
+++ b/HW2/Eric_Cheng_DimRed_Tabular.ipynb
@@ -23,7 +23,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uJEX2oUTVbRP",
-        "outputId": "2481f0f9-a7c5-447f-ae8e-3e488f146128"
+        "outputId": "5b6afce8-fae4-4608-c9a0-8ba5be10ca67"
       },
       "source": [
         "from google.colab import drive\n",
@@ -78,6 +78,32 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lzw_XSpRFCpb"
+      },
+      "source": [
+        "# **Dimensionality reduction techniques**\n",
+        "\n",
+        "Write a colab to demonstrate various dimensionality reduction techniques discussed in the class using \n",
+        "\n",
+        "a) any image data set (i gave examples of faces and digits data sets colabs in slides in links / notes)\n",
+        "\n",
+        "b) any tabular data set (i gave example of iris data set in slides with colab links)\n",
+        "\n",
+        "You need to showcase:\n",
+        "\n",
+        "1. PCA\n",
+        "2. SVD\n",
+        "3. LLE\n",
+        "4. t-SNE\n",
+        "5. ISOMAP\n",
+        "6. UMAP\n",
+        "\n",
+        "For this tabular assignment I will be using the gene expression dataset found at: https://www.kaggle.com/crawford/gene-expression/"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -85,7 +111,7 @@
           "height": 914
         },
         "id": "0JYmTqXE2Rc8",
-        "outputId": "3c24bc4b-443f-45e8-f203-13e83df6e2dd"
+        "outputId": "c08b8d6a-2c59-48d2-845d-f88d208b41ba"
       },
       "source": [
         "df = pd.read_csv('/content/gdrive/My Drive/Colab Notebooks/Dataset/gene_train.csv')\n",
@@ -93,7 +119,7 @@
         "lf = pd.read_csv('/content/gdrive/My Drive/Colab Notebooks/Dataset/label.csv')\n",
         "df.head(10)"
       ],
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,8 +1055,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 4
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c0BoJjapLdmF"
+      },
+      "source": [
+        "First I want to check the shape and the null values. Since there are no null values the dataset does not need imputations"
       ]
     },
     {
@@ -1040,12 +1075,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xin7Nbxg4Rxx",
-        "outputId": "14c457c7-0ebf-4e03-8e9a-2da8ebb087db"
+        "outputId": "46ddc03e-add7-44c3-f3c0-c6330c547237"
       },
       "source": [
         "df.shape"
       ],
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1090,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     },
@@ -1066,12 +1101,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nDUOGDmy5Zzu",
-        "outputId": "0c4b4eac-16de-40dd-cfe1-5541060490bd"
+        "outputId": "a694741d-523c-4339-dec6-c29932b8d7e9"
       },
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,8 +1127,17 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u8M62na-PKOk"
+      },
+      "source": [
+        "I only want the columns without call for my training and testing sets"
       ]
     },
     {
@@ -1105,7 +1149,7 @@
         "training_val=[col for col in df.columns if \"call\" not in col]\n",
         "testing_val=[col for col in pf.columns if \"call\" not in col]"
       ],
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -1117,7 +1161,7 @@
         "X_train = df[training_val].T\n",
         "X_test = pf[testing_val].T"
       ],
-      "execution_count": 55,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1132,7 +1176,7 @@
         "X_train = X_train.drop(['Gene Description', 'Gene Accession Number'])\n",
         "X_test = X_test.drop(['Gene Description', 'Gene Accession Number'])"
       ],
-      "execution_count": 56,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1147,7 +1191,7 @@
         "X_test.index = X_test.index.astype(int)\n",
         "X_test.sort_index(inplace= True)"
       ],
-      "execution_count": 57,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -1158,12 +1202,12 @@
           "height": 439
         },
         "id": "6Mn-8UFl8BkI",
-        "outputId": "0b9b4442-1c86-49ef-d77f-6ca5515c1988"
+        "outputId": "0c6708aa-8502-40cb-b896-1ebce4845305"
       },
       "source": [
         "X_train.head(10)"
       ],
-      "execution_count": 58,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2133,7 +2177,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 11
         }
       ]
     },
@@ -2144,12 +2188,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qXht36TV_hUG",
-        "outputId": "c4ad4637-bfbd-448e-e8cf-ee86e9f568d7"
+        "outputId": "22b50642-57ee-41cc-8d84-89ca9d8eff3c"
       },
       "source": [
         "X_train.shape"
       ],
-      "execution_count": 59,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2159,7 +2203,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 12
         }
       ]
     },
@@ -2173,7 +2217,7 @@
         "y = y.set_index('patient')\n",
         "labels = ['ALL', 'AML']"
       ],
-      "execution_count": 60,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -2183,12 +2227,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ik4K5EQp8kuZ",
-        "outputId": "3b00596c-268c-45cd-b955-f98b150ac1a0"
+        "outputId": "dfcd7e2d-3f11-4f58-8143-0b7337a8e247"
       },
       "source": [
         "print(y.value_counts())"
       ],
-      "execution_count": 61,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -2211,7 +2255,7 @@
         "y_train = y['cancer'][:38]\n",
         "y_test = y['cancer'][38:]"
       ],
-      "execution_count": 62,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -2220,7 +2264,9 @@
         "id": "Z_b_AeQF9UWR"
       },
       "source": [
-        "# **PCA Dimension Reduction**"
+        "# **PCA Dimension Reduction**\n",
+        "\n",
+        "I use PCA to reduce the dimensions into 2 or 3 dimensions for visualization."
       ]
     },
     {
@@ -2254,7 +2300,7 @@
         "                imagebox = AnnotationBbox(OffsetImage(image, cmap=\"binary\"), image_coord)\n",
         "                ax.add_artist(imagebox)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -2267,7 +2313,7 @@
         "X_train_pca = pca.fit_transform(X_train)\n",
         "X_test_pca = pca.transform(X_test)"
       ],
-      "execution_count": 67,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -2278,7 +2324,7 @@
           "height": 428
         },
         "id": "VvWy_5H79n59",
-        "outputId": "e52e5dac-0fd5-4104-87ab-8a1f67c0138c"
+        "outputId": "6151a778-263b-4764-86f5-21fe957c8539"
       },
       "source": [
         "X_2d = PCA(n_components = 2).fit_transform(X_train)\n",
@@ -2287,7 +2333,7 @@
         "plt.scatter(X_2d[:, 0], X_2d[:, 1], cmap= mpl.cm.get_cmap(\"Paired\"))\n",
         "plt.show()"
       ],
-      "execution_count": 83,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2309,7 +2355,9 @@
         "id": "xMVq9Wi7AMbX"
       },
       "source": [
-        "# **SVD**"
+        "# **SVD**\n",
+        "\n",
+        "Singular Value Decomposition, or SVD, is a computational method often employed to calculate principal components for a dataset. Using SVD to perform PCA is efficient and numerically robust."
       ]
     },
     {
@@ -2328,7 +2376,7 @@
         "svd.fit(X_train)\n",
         "svd.transform(X_train)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2435,7 +2483,7 @@
         "plt.scatter(X_svd[:, 0], X_svd[:, 1], cmap= mpl.cm.get_cmap(\"Paired\"))\n",
         "plt.show()"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2461,6 +2509,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M0TshO0lW90E"
+      },
+      "source": [
+        "\n",
+        "R-distributed stochastic neighbor embedding (TSNE) is a statistical method for visualizing high-dimensional data by giving each datapoint a location in a two or three-dimensional map."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -2475,7 +2533,7 @@
         "tsne = TSNE(n_components=2, verbose=1, perplexity=40, n_iter=300)\n",
         "X_reduced_tsne = tsne.fit_transform(X_train)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2508,7 +2566,7 @@
         "plt.scatter(X_reduced_tsne[:, 0], X_reduced_tsne[:, 1], cmap= mpl.cm.get_cmap(\"Paired\"))\n",
         "plt.show()"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2534,6 +2592,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UNSugCQ8W_Qn"
+      },
+      "source": [
+        "\n",
+        "The LLE algorithm is an unsupervised method for dimensionality reduction. It tries to reduce these n-Dimensions while trying to preserve the geometric features of the original non-linear feature structure."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "CW9mGvLCJp9k"
@@ -2543,7 +2611,7 @@
         "\n",
         "X_reduced_lle = LocallyLinearEmbedding(random_state=49).fit_transform(X_train)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2562,7 +2630,7 @@
         "plt.scatter(X_reduced_lle[:, 0], X_reduced_lle[:, 1], cmap= mpl.cm.get_cmap(\"Paired\"))\n",
         "plt.show()"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2584,7 +2652,9 @@
         "id": "OsWCJ4nxPSR7"
       },
       "source": [
-        "# **ISOMAP**"
+        "# **ISOMAP**\n",
+        "\n",
+        "ISOMAP is Non-linear dimensionality reduction through Isometric Mapping. Parameter n_neighbors use to specify neighbors to choose for pair wise distance calculation."
       ]
     },
     {
@@ -2597,7 +2667,7 @@
         "\n",
         "X_reduced_isomap = Isomap(n_components=2, n_neighbors=10, n_jobs=-1).fit_transform(X_train)"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2616,7 +2686,7 @@
         "plt.scatter(X_reduced_isomap[:, 0], X_reduced_isomap[:, 1], cmap= mpl.cm.get_cmap(\"Paired\"))\n",
         "plt.show()"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2638,7 +2708,9 @@
         "id": "sz8j7uUpPik4"
       },
       "source": [
-        "# **UMAP**"
+        "# **UMAP**\n",
+        "\n",
+        "Uniform Manifold Approximation and Projection (UMAP) is a novel manifold learning technique for dimension reduction. It can be used to visualize the clusters nicely on the gene expression dataset."
       ]
     },
     {
@@ -2654,7 +2726,7 @@
         "!pip install umap-learn\n",
         "import umap"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2696,7 +2768,7 @@
       "source": [
         "X_reduced_umap = umap.UMAP(n_neighbors=5).fit_transform(X_train)"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2715,7 +2787,7 @@
         "plt.scatter(X_reduced_umap[:, 0], X_reduced_umap[:, 1], cmap= mpl.cm.get_cmap(\"Paired\"))\n",
         "plt.show()"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2729,6 +2801,17 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ldC-UIK7Y6Zm"
+      },
+      "source": [
+        "# **Conclusion**\n",
+        "\n",
+        "Due to the better visualization of clusters I would recommend UMAP as the best model for visualization"
       ]
     }
   ]
