Add import packages

--- a/HW4/Eric_Cheng_Clustering.ipynb
+++ b/HW4/Eric_Cheng_Clustering.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Eric_Cheng_Clustering.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,12 +19,45 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FQV9uiMHcbnl",
+        "outputId": "d144c5ee-b487-40a3-ce74-f5f0a3a6d1a8"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/gdrive\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "voW4wlwgDCMb"
       },
       "source": [
-        ""
+        "# Importing packages\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib as mpl\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sn\n",
+        "import math\n",
+        "import warnings # Current version of Seaborn generates a bunch of warnings that will be ignored.\n",
+        "warnings.filterwarnings('ignore')\n",
+        "warnings.simplefilter('ignore')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     }
   ]
