Add more comments

--- a/HW4/Eric_Cheng_Clustering.ipynb
+++ b/HW4/Eric_Cheng_Clustering.ipynb
@@ -17,6 +17,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N3EC0UEA7wmF"
+      },
+      "source": [
+        "# **Use various clustering techniques in colab**\n",
+        "\n",
+        "Implement various clustering algorithms in colabs\n",
+        "\n",
+        "submit one colab per assignment - provide complete colab with proper documentation etc.,. \n",
+        "\n",
+        "1.   KMeans Clustering\n",
+        "2.   Hierarchal Clustering\n",
+        "3.   Gaussian Mixture Model\n",
+        "4.   DBScan Clustering\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -29,7 +47,7 @@
         "from google.colab import drive\n",
         "drive.mount(\"/content/gdrive\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,8 +76,17 @@
         "warnings.filterwarnings('ignore')\n",
         "warnings.simplefilter('ignore')"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0JovZd5s7jcv"
+      },
+      "source": [
+        "For the clustering algorithms, I will be using the Video Game Sales database which will give the sales of video games over a period of a few decades and their publisher. The dataset on Kaggle can be found here: https://www.kaggle.com/gregorut/videogamesales"
+      ]
     },
     {
       "cell_type": "code",
@@ -75,7 +102,7 @@
         "df = pd.read_csv('/content/gdrive/My Drive/Colab Notebooks/Dataset/vgsales.csv')\n",
         "df.head(10)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +317,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,6 +346,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vVFefuQ18gGj"
+      },
+      "source": [
+        "Check if there are any null values and if there are just drop those rows. These null rows can be removed because they represent a few minor video games that did not list the year or publisher and dropping them should not have major impacts on my result."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -330,7 +366,7 @@
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,7 +404,7 @@
         "df.dropna(axis= 0, inplace= True)\n",
         "df.isnull().sum()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,6 +439,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Oqo66ViZ8txY"
+      },
+      "source": [
+        "First I can visualize a comparison between NA Sales and JP Sales for games, and it shows that most of them are clustered towards the bottom left, meaning low to average sales for both NA and JP."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -418,7 +463,7 @@
         "plt.xlabel('NA Sales ($)')\n",
         "plt.ylabel('JP Sales ($)')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,6 +487,21 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TMb7dhqC83GJ"
+      },
+      "source": [
+        "For KMeans from scratch I need a few functions: \n",
+        "\n",
+        "*   Randomly assign centroids to start things up.\n",
+        "*   Based on those centroids (and an observation’s distance from it), assign each observation to a cluster.\n",
+        "*   Calculate the mean coordinates of each cluster; these are our new centroids.\n",
+        "*   Reassign clusters based on new centroids.\n",
+        "*   Keep repeating steps 3 and 4 until convergence.\n"
       ]
     },
     {
@@ -495,8 +555,17 @@
         "        sum_squares.append(np.sum(np.sum((current_cluster - mean_repmat)**2)))\n",
         "    return sum_squares"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4Y4QC3lu9LaH"
+      },
+      "source": [
+        "I can take the NA and JP Sales and run the clustering algorithms on them."
+      ]
     },
     {
       "cell_type": "code",
@@ -507,7 +576,7 @@
         "df_cluster = df[[\"NA_Sales\", \"JP_Sales\"]]\n",
         "df_array = np.array(df_cluster)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +602,7 @@
         "    cluster_vars.append(cluster_var)\n",
         "    print(i+1, round(cluster_var))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,6 +634,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_HIIWKWS9WVv"
+      },
+      "source": [
+        "For each iteration in my loop, I stored the average of the clusters’ sums of squared deviations from their centroids in the list cluster_vars. As the amount of iterations increase, the average variance drops, and I want to wait until they converge."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -580,7 +658,7 @@
         "plt.xlabel('Iterations')\n",
         "plt.ylabel('Squared Deviations')"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -607,6 +685,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RTwgXqZJ9pPA"
+      },
+      "source": [
+        "Here is the preclustering result, and as one can see, the clusters are pretty imbalanced."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -622,7 +709,7 @@
         "plt.xlabel('NA Sales ($)')\n",
         "plt.ylabel('JP Sales ($)')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,6 +736,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o3WnrJEy9hen"
+      },
+      "source": [
+        "Here is the result of the KMeans Clustering, overall, the clustering was pretty good for the most part."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -664,7 +760,7 @@
         "plt.xlabel('NA Sales ($)')\n",
         "plt.ylabel('JP Sales ($)')"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,6 +796,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FyzZS_Dy96BU"
+      },
+      "source": [
+        "I first normalize the data for the sales of the game."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -716,7 +821,7 @@
         "data_scaled = pd.DataFrame(data_scaled, columns=df_hi.columns)\n",
         "data_scaled.head(10)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,6 +968,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4DUfzYqo9-UD"
+      },
+      "source": [
+        "Running the Hierarchal model, I can use the dendrogram to see the number of clusters. It only split into two clusters."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -878,7 +992,7 @@
         "plt.title(\"Dendrograms\")  \n",
         "dend = shc.dendrogram(shc.linkage(data_scaled, method='ward'))"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -908,7 +1022,7 @@
         "cluster = AgglomerativeClustering(n_clusters=2, affinity='euclidean', linkage='ward')  \n",
         "cluster.fit_predict(data_scaled)"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -936,7 +1050,7 @@
         "plt.figure(figsize=(12, 7))  \n",
         "plt.scatter(data_scaled['NA_Sales'], data_scaled['JP_Sales'], c=cluster.labels_) "
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -981,6 +1095,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4dL2q-m7-NOh"
+      },
+      "source": [
+        "The GaussianMixture object implements the expectation-maximization (EM) algorithm for fitting mixture-of-Gaussian models. It can also draw confidence ellipsoids for multivariate models, and compute the Bayesian Information Criterion to assess the number of clusters in the data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -994,7 +1117,7 @@
         "gmm = GaussianMixture(n_components=4)\n",
         "gmm.fit(data_scaled)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1142,7 @@
         "frame['cluster'] = labels\n",
         "frame.columns = [\"Rank\", \"NA_Sales\", \"EU_Sales\", \"JP_Sales\", \"Other_Sales\", \"Global_Sales\", \"cluster\"]"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1039,7 +1162,7 @@
         "    plt.scatter(data[\"NA_Sales\"],data[\"EU_Sales\"],cmap= plt.cm.viridis)\n",
         "plt.show()"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1089,7 +1212,7 @@
         "db = DBSCAN(eps=0.4, min_samples=20)\n",
         "db.fit(db_scan)"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1118,7 +1241,7 @@
         "plt.figure(figsize=(12, 7)) \n",
         "plt.scatter(db_scan[:,0], db_scan[:,1],c= pred, cmap= plt.cm.viridis)"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
